--- a/_sample.html
+++ b/_sample.html
@@ -88,6 +88,12 @@
             border: none;
         }
 
+/* Media query for smaller screens */
+        @media (max-width: 700px) {
+            .page-name {
+                font-size: 30px;
+            }
+        }
 
     </style>
 </head>
